Update README.md and package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "w11k.angular-seo-header",
+  "name": "@phagento/w11k.angular-seo-header",
   "version": "0.1.0",
   "description": "Angular-SEO-Header takes care of meta tags, canonicals, keywords, robots tags with ui-router",
   "main": "angular-seo-header.js",
